Bug 475986.  Make text-align:start work on <html:th> correctly. r+sr=dbaron